# yuuki-lang

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE.md  README.md  appveyor.yml  build.ps1
include/yuuki/compiler/: compiler.h
include/yuuki/compiler/diagnostics/: compile_errors.h  diagnostic.h  diagnostic_builder.h  diagnostic_stream.h
include/yuuki/compiler/feasy/: code_position.h  code_postion.h  formatter.h  lexer.h  parser.h  syntax_context.h  syntax_context_manager.h
include/yuuki/compiler/feasy/syntax/: binary_expression.h  block_statement.h  class_declaration.h  comment.h  expression.h  field_declaration.h  generic.h  generic_declaration.h  generic_type.h  identifier_expression.h  import_directive.h  inherit_declaration.h  inherit_type_list.h  method_declaration.h  modifier_bag.h  modifier_list.h  name.h  namespace_declaration.h  param_list.h  statement.h  syntax_node.h  syntax_ostream_writer.h  syntax_tree.h  syntax_unit.h  type.h  unary_expression.h  variable_declaration_list.h
include/yuuki/compiler/feasy/token/: operator_util.h  token.h  token_type.h  token_util.h  tokens.inc
include/yuuki/utils/: string_util.h
src/: CMakeLists.txt
src/yuuki/: CMakeLists.txt  yuc.cc  yuuki.cc
src/yuuki/compiler/: compiler.cc
src/yuuki/compiler/diagnostics/: diagnostic.cc  diagnostic_builder.cc  diagnostic_stream.cc
src/yuuki/compiler/feasy/: formatter.cc  lexer.cc  parser.cc  syntax_context.cc  syntax_token_manager.cc
src/yuuki/compiler/feasy/syntax/: binary_expression.cc  block_statement.cc  class_declaration.cc  comment.cc  expression.cc  field_declaration.cc  generic.cc  generic_declaration.cc  generic_type.cc  identifier_expression.cc  import_directive.cc  inherit_declaration.cc  inherit_type_list.cc  method_declaration.cc  modifier_bag.cc  modifier_list.cc  name.cc  namespace_declaration.cc  namespcae_declaraion.cc  param_list.cc  statement.cc  syntax_node.cc  syntax_ostream_writer.cc  syntax_tree.cc  syntax_unit.cc  type.cc  unary_expression.cc  variable_declaration_list.cc
src/yuuki/compiler/feasy/token/: operator_util.cc  token.cc  token_util.cc
src/yuuki/utils/: string_util.cc
test/yuuki/: CMakeLists.txt
test/yuuki/compiler/feasy/: lexer_test.cc  parser_test.cc
test/yuuki/compiler/feasy/syntax/: syntax_ostream_writer_test.cc
test/yuuki/compiler/feasy/token/: token_test.cc  token_util_test.cc
test/yuuki/utils/: string_util_test.cc
