cmake_minimum_required(VERSION 3.10)
project(yuuki)
set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
set(BUILD_GMOCK OFF CACHE BOOL "" FORCE)
set(BUILD_GTEST ON CACHE BOOL "" FORCE)
if (MSVC_VERSION GREATER_EQUAL "1900")
    include(CheckCXXCompilerFlag)
    CHECK_CXX_COMPILER_FLAG("/std:c++latest" _cpp_latest_flag_supported)
    if (_cpp_latest_flag_supported)
        add_compile_options("/std:c++latest")
    endif()
    add_compile_definitions(NOMINMAX)
else()
    if(MINGW)
        add_definitions(-D_WIN32_WINNT=0x0600)
    endif()
    if(CMAKE_COMPILER_IS_CLANG)
        set(CMAKE_CXX_FLAGS "-g -Wall -stdlib=libc++")
    else()
        set(CMAKE_CXX_FLAGS "-g -Wall")
    endif()
    set(CMAKE_CXX_STANDARD 17)
endif()
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/artifacts)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/artifacts)
add_subdirectory(thirdparty/googletest)
enable_testing()
include_directories(${gtest_SOURCE_DIR}/include ${gtest_SOURCE_DIR})
include_directories(include)

add_subdirectory(src)
add_subdirectory(test)